styles.css
html, body {
    background-color: black;
    font-weight: 400;
    font-size: 14px;
    line-height: 1.4;
    color: rgba(255, 255, 255, 0.64);
    margin: 0;
    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;}

main {
    padding: 50px 15px;
}

main, footer {
    max-width: 560px;
    margin: auto;
}

footer {
    padding: 20px;
}

header {
    position: sticky;
    top: 0;
}

i {
    color: white;
    margin-left: 5px;
}

nav {
    padding: 20px;
    display: flex;
    align-items: center;
}

h1 {
    font-size: 20px;
    margin-bottom: 5px;
}

h2 {
    font-size: 16px;
 }

h1, h2 {
    color: white;
    font-weight: 500;
    line-height: inherit;
}

section {
    margin-bottom: 40px;
}

ul {
    padding-left: 10px;
}

a:not(.download-btn) {
    font-weight: 400;
    color: white;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

figure {
    margin: 0 25px 0 0;
    z-index: 1000;
    position: relative;
}

img {
    transition: transform .3s ease-out;
}

p {
    font-size: inherit;
    font-weight: 300;
    line-height: inherit;
    margin: 4px 0;
}

.about--flex {
    display: flex;
    margin-bottom: 40px;
}

.grid__container {
    display: grid;
    grid-template-columns: 3fr 1.5fr;
    grid-gap: 20px 40px;
}

.link-container {
    display: grid;
    grid-template-columns: .5fr 1fr;
}

.tech-stack {
    color: white;
    opacity: .5;
}

#download-btn {
    font-weight: inherit;
    font-size: 10px;
    line-height: 2.2;
    background-color: rgb(121, 131, 245);
    color: white;
    letter-spacing: 1px;
    padding: 3px 10px;
    border-radius: 5px;
    text-decoration: none;
    text-transform: uppercase;
    margin-left: auto;
}

#download-btn:hover {
    text-decoration: none;
}

